[gd_scene load_steps=4 format=3 uid="uid://cn0uxrgx4pdie"]

[ext_resource type="Script" path="res://UI/main_menu.gd" id="1_vl84j"]
[ext_resource type="Texture2D" uid="uid://b5q0xbhlk14tx" path="res://UI/ressources/exit.png" id="2_hnf4a"]
[ext_resource type="Script" path="res://UI/upgrade_button.gd" id="3_frgtn"]

[node name="MainUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vl84j")

[node name="GameTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -345.0
offset_top = 19.0
offset_right = 345.0
offset_bottom = 102.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.462745, 0.882353, 0.937255, 1)
theme_override_font_sizes/font_size = 60
text = "Bubble"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuitButton" type="Button" parent="."]
layout_mode = 1
offset_left = 5.0
offset_top = 5.0
offset_right = 82.0
offset_bottom = 82.0
icon = ExtResource("2_hnf4a")
flat = true
expand_icon = true

[node name="HealthUpgradeButton" type="Button" parent="."]
layout_mode = 0
offset_left = 66.0
offset_top = 486.0
offset_right = 194.0
offset_bottom = 614.0
script = ExtResource("3_frgtn")

[node name="VBoxContainer" type="VBoxContainer" parent="HealthUpgradeButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2

[node name="Name" type="Label" parent="HealthUpgradeButton/VBoxContainer"]
layout_mode = 2
text = "Vie"

[node name="Level" type="Label" parent="HealthUpgradeButton/VBoxContainer"]
layout_mode = 2
text = "Niveau 0"

[node name="Cost" type="Label" parent="HealthUpgradeButton/VBoxContainer"]
layout_mode = 2
text = "Prix : 999 NaCl"

[node name="Value" type="Label" parent="HealthUpgradeButton/VBoxContainer"]
layout_mode = 2
text = "Valeur : 420.69"

[connection signal="pressed" from="QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="HealthUpgradeButton" to="." method="_on_health_upgrade_button_pressed"]
